fixed the spacing between the ingredients this time and pushed the recipe buttons a bit closer together

--- a/app/assets/css/searchResults.styl
+++ b/app/assets/css/searchResults.styl
@@ -2,7 +2,7 @@
 .recipeBox
   display flex
   flex-direction row
-  padding 5px
+  padding 1px 5px
   margin auto
   border-bottom: 1px solid $color1
 
